<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DealsToGoOut</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">search items here</string>
    <string name="button_send">Go</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="random_text">random text</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="my_shopping_list">My Shopping List</string>
    <string name="map_view_text">Map View</string>
    <string name="location_A">A : I\'m Here</string>
    <string name="location_B">B : Metro</string>
    <string name="location_C">C : Food Basics</string>
    <string name="location_D">D : Shopper</string>
    <string name="quantity_hint">quantity</string>
    <!-- Image content description -->
    <string name="logo_desc">This is an icon of our logo</string>
    <string name="item_img_desc">This is an icon for the item</string>

    <!-- Buttons -->
    <string name="login_button">Login</string>
    <string name="shoplist_button">Shop List</string>
    <string name="Map_button">Map</string>
    <string name="Search_button">Search</string>
    <string name="home_button">Home</string>
    <string name="cart_button">My List</string>
    <string name="account_button">Account</string>
    <string name="add_to_cart_button">Add to List</string>
    <string name="close_button">Close</string>

    <!-- Drop List -->
    <string name="sort_by">Sort By</string>
    <string name="sort_in">Sort In</string>
    <string name="display_category">Display Category</string>
    <string name="stroe_type_text">Store Type</string>

    <string-array name="sorting">
        <item>Price</item>
        <item>Regular Price</item>
        <item>Store</item>
        <item>End Date</item>
    </string-array>
    <string-array name="asodc">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="display_categories">
        <item>All</item>
        <item>Dairy</item>
        <item>Snacks</item>
        <item>Produce </item>
        <item>Drinks</item>
        <item>Instant Meals</item>
        <item>Bread</item>
        <item>Vegetarian/Vegan</item>
        <item>Desserts</item>
        <item>Condiments</item>
        <item>Other</item>
    </string-array>
    <string-array name="store_type">
        <item>Supermarket</item>
        <item>Grocery</item>
    </string-array>

    <string name="title_activity_home_page">HomePage</string>

    <!-- Dialog -->
    <string name="detail_text">Detail:</string>
    <string name="map_text">Map:</string>
    <string name="more_text">More</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="title_activity_my_cart">My Cart</string>
    <string name="title_activity_map">MapActivity</string>

</resources>