<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_overlay"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/logo_desc"
        android:src="@raw/ic_launcher" />

    <Button
        android:id="@+id/ButtonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="search"
        android:text="@string/Search_button" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/ButtonSearch"
        android:layout_toRightOf="@+id/logImg"
        android:hint="@string/edit_message" >
    </EditText>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_message"
        android:entries="@array/store_type"
        android:prompt="@string/stroe_type_text" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_below="@+id/edit_message"
        android:layout_toRightOf="@+id/spinner1"
        android:entries="@array/display_categories"
        android:prompt="@string/display_category" />

    <TextView
        android:id="@+id/map_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_centerHorizontal="true"
        android:text="@string/map_view_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/map_view"
        android:layout_width="200dp"
        android:layout_height="270dp"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/map_view_text"
        android:contentDescription="@string/logo_desc"
        android:src="@raw/mapview2" />

    <TextView
        android:id="@+id/map_locationA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/map_view"
        android:text="@string/location_A"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/map_locationC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/map_locationA"
        android:text="@string/location_B"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:id="@+id/sep_line5"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/map_locationB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_view"
        android:layout_toRightOf="@+id/sep_line5"
        android:text="@string/location_C"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/map_locationD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_locationB"
        android:layout_toRightOf="@+id/sep_line5"
        android:text="@string/location_D"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/map"
        android:onClick="goHome"
        android:text="@string/home_button" />

    <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/sep_line"
        android:text="@string/Map_button" />

    <View
        android:id="@+id/sep_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/sep_line"
        android:onClick="chCart"
        android:text="@string/cart_button" />

    <Button
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/cart"
        android:onClick="chLogin"
        android:text="@string/account_button" />

</RelativeLayout>