<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/my_shopping_list"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Search_text"
        android:entries="@array/sorting"
        android:prompt="@string/sort_by" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_below="@+id/Search_text"
        android:layout_toRightOf="@+id/spinner1"
        android:entries="@array/asodc"
        android:prompt="@string/sort_in" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:layout_below="@+id/Search_text"
        android:layout_toRightOf="@+id/spinner2"
        android:entries="@array/display_categories"
        android:prompt="@string/display_category" />

    <ListView
        android:id="@+id/sale_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sep_line3"
        android:layout_below="@+id/spinner1"
        android:paddingLeft="2dp" >
    </ListView>

    <View
        android:id="@+id/sep_line3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/total_text"
        android:layout_marginBottom="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sep_line4"
        android:text="@string/my_shopping_list"
        android:textSize="20sp" />

    <View
        android:id="@+id/sep_line4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/home"
        android:layout_marginBottom="1dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/map"
        android:text="@string/home_button" />

    <Button
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/sep_line"
        android:text="@string/Map_button" />

    <View
        android:id="@+id/sep_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/sep_line"
        android:text="@string/cart_button" />

    <Button
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/cart"
        android:onClick="chLogin"
        android:text="@string/account_button" />

</RelativeLayout>